Overlay option doesn't work in Image Editor, Mask editing. #84053

Closed
opened 2020-12-22 17:17:56 +01:00 by Mario Mey · 8 comments

System Information
Operating system: Debian 10
Graphics card: Radeon™ RX Vega 11 (AMD Ryzen 5 3400G)

Blender Version
Broken: 2.91 (from blender.org)
imagen.png
Worked: 2.83.10 (from blender.org)
imagen.png

Short description of error
In Mask Display options, Overlay does nothing.

Exact steps for others to reproduce the error

  • Open file 114-mask-overlay.blend
  • Render scene if rendered image is not present.
  • Check Overlay in Mask Display options on and off.
**System Information** Operating system: Debian 10 Graphics card: Radeon™ RX Vega 11 (AMD Ryzen 5 3400G) **Blender Version** Broken: 2.91 (from blender.org) ![imagen.png](https://archive.blender.org/developer/F9525533/imagen.png) Worked: 2.83.10 (from blender.org) ![imagen.png](https://archive.blender.org/developer/F9525535/imagen.png) **Short description of error** In **Mask Display** options, **Overlay** does nothing. **Exact steps for others to reproduce the error** - Open file [114-mask-overlay.blend](https://archive.blender.org/developer/F9525527/114-mask-overlay.blend) - Render scene if rendered image is not present. - Check **Overlay** in **Mask Display** options on and off.
Author

Added subscriber: @MarioSottile

Added subscriber: @MarioSottile
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2020-12-22 18:04:44 +01:00
Philipp Oeser was unassigned by Jeroen Bakker 2021-01-04 15:59:32 +01:00
Jeroen Bakker self-assigned this 2021-01-04 15:59:32 +01:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

@Jeroen-Bakker: this needs to be added to the Overlay engine, right? I had this on my list to look at, do you want it on your list?

@Jeroen-Bakker: this needs to be added to the Overlay engine, right? I had this on my list to look at, do you want it on your list?
Member

This is a tricky one as masks aren't part of the overlay engine. The intention is to add the masks to the overlay engine after all editors that use the mask are migrated to the draw module.

The solution isn't clear at this point. I would suggest to mask the overlay buffer of the framebuffer. This might need to draw the mask inverted so it will be composited correctly.

If you're up for a challenge you can pick this one up!

This is a tricky one as masks aren't part of the overlay engine. The intention is to add the masks to the overlay engine after all editors that use the mask are migrated to the draw module. The solution isn't clear at this point. I would suggest to mask the overlay buffer of the framebuffer. This might need to draw the mask inverted so it will be composited correctly. If you're up for a challenge you can pick this one up!
Member

... add the masks to the overlay engine after all editors that use the mask are migrated to the draw module

Ah, OK, didnt have this in mind. Thx for the clarification, will stay in your hands then :)

> ... add the masks to the overlay engine **after all editors that use the mask are migrated to the draw module** Ah, OK, didnt have this in mind. Thx for the clarification, will stay in your hands then :)

This issue was referenced by 7cd6f667e3

This issue was referenced by 7cd6f667e33e60f3d53e465023bb75f90f499b07
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84053
No description provided.